<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCartZap">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="402dp"
        android:layout_height="348dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:background="#F5F5F9 "
            android:ems="10"
            android:fontFamily="@font/lato"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="Эдуард"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:background="#F5F5F9 "
            android:ems="10"
            android:fontFamily="@font/lato"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="Олегович"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:background="#F5F5F9 "
            android:ems="10"
            android:fontFamily="@font/lato"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="Тицкий"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextDate2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="#F5F5F9 "
            android:ems="10"
            android:fontFamily="@font/lato"
            android:inputType="date"
            android:minHeight="48dp"
            android:text="Дата рождения"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/spinner"
            android:minHeight="48dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/lato"
        android:text="@string/prop2"
        android:textColor="#1A6FEE "
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="370dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/lato"
        android:text="@string/textCar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="185dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/textCreate"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="367dp"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="В картах пациентов будут храниться результаты анализов вас и ваших близких"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <Button
        android:id="@+id/button3"
        android:layout_width="402dp"
        android:layout_height="48dp"
        android:backgroundTint="#1A6FEE "
        android:clickable="false"
        android:text="Создать"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>