<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adress">

    <RelativeLayout
        android:layout_width="415dp"
        android:layout_height="458dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/lato_bold"
            android:text="Адрес сдачи анализов"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="200dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="21dp"
            android:layout_toEndOf="@+id/textView55"
            app:srcCompat="@drawable/close" />

        <TextView
            android:id="@+id/textView59"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView55"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="320dp"
            android:text="Ваш адрес" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView59"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="28dp"
            android:background="#F5F5F9 "
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="Перекопская 22к1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView63"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextPersonName6"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato"
            android:text="Долгота" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="14dp"
            android:backgroundTint="#1A6FEE "
            android:onClick="backTwo"
            android:text="Подтвердить" />

        <EditText
            android:id="@+id/editTextNumber5"
            android:layout_width="97dp"
            android:layout_height="48dp"
            android:layout_below="@+id/textView63"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:background="#F5F5F9 "
            android:ems="10"
            android:hint="@string/dolgota"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextPersonName6"
            android:layout_marginStart="69dp"
            android:layout_marginTop="17dp"
            android:layout_toEndOf="@+id/textView63"
            android:text="Широта" />

        <EditText
            android:id="@+id/editTextNumber6"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView70"
            android:layout_marginStart="22dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/editTextNumber5"
            android:background="#F5F5F9 "
            android:ems="10"
            android:hint="@string/width"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextPersonName6"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="132dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="36dp"
            android:layout_toEndOf="@+id/textView70"
            android:fontFamily="@font/lato"
            android:text="Высота" />

        <EditText
            android:id="@+id/editTextNumber7"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView71"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="23dp"
            android:layout_toEndOf="@+id/editTextNumber6"
            android:background="#F5F5F9 "
            android:ems="10"
            android:hint="@string/heignt"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView72"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextNumber5"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="320dp"
            android:text="Домофон" />

        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_above="@+id/button19"
            android:layout_below="@+id/textView72"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="63dp"
            android:background="#F5F5F9 "
            android:ems="10"
            android:inputType="textPersonName"
            android:text="188*2180" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="345dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="75dp"
            android:minWidth="48dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView74"
            android:layout_width="187dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="351dp"
            android:layout_marginBottom="86dp"
            android:fontFamily="@font/lato_bold"
            android:text="Созранить этот адрес?"
            android:textColor="#000000" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>